--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
  <section id="centres-interets">
     <h2>My hobbies</h2>
     <p>I love doing activities with my friends and no matter what we do at the moment we are together. Sometimes we go to the cinema to watch a movie. Often we are just going for a walk and talk about anything.</p>
-    <img src="image/activite.jpg" alt="activite" class="image-carre">
+    <img src="activite.jpg" alt="activite" class="image-carre">
 </section>
 
 <!-- Page 3 : Projet professionnel -->
